--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "gatsby": "^2.23.9",
     "gatsby-image": "^2.4.8",
+    "gatsby-plugin-postcss": "^3.7.0",
+    "gatsby-plugin-purgecss": "^5.0.0",
     "gatsby-plugin-react-helmet": "^3.3.5",
     "gatsby-plugin-sharp": "^2.6.43",
     "gatsby-source-contentful": "^2.3.17",
@@ -17,13 +19,15 @@
     "gatsby-transformer-sharp": "^2.5.6",
     "gh-pages": "^3.1.0",
     "lodash": "^4.17.15",
+    "postcss": "^8.2.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "contentful-import": "^7.8.6",
-    "netlify-cli": "^2.54.0"
+    "netlify-cli": "^2.54.0",
+    "tailwindcss": "^2.0.3"
   },
   "engines": {
     "node": ">=10.13.0"
