--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "https://github.com/contentful/starter-gatsby-blog/issues"
   },
   "dependencies": {
+    "autoprefixer": "^10.2.4",
     "gatsby": "^2.23.9",
     "gatsby-image": "^2.4.8",
     "gatsby-plugin-postcss": "^3.7.0",
@@ -22,12 +23,12 @@
     "postcss": "^8.2.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "tailwindcss": "^2.0.3"
   },
   "devDependencies": {
     "contentful-import": "^7.8.6",
-    "netlify-cli": "^2.54.0",
-    "tailwindcss": "^2.0.3"
+    "netlify-cli": "^2.54.0"
   },
   "engines": {
     "node": ">=10.13.0"
